Signed-off-by: mtchang <mtchang@outlook.com>

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
+<body>
 
-<a href="https://ddmxinfra.github.io/appdl/index.html">DDMWallet 2.1.41 com.ddm.exchangewallet.enterprise1</a>
+
+DDMWALLET 下載
+<a href="https://ddmxinfra.github.io/appdl/manifest.plist">DDMWallet 2.1.41</a>
+com.ddm.exchangewallet.enterprise1
+
+
+</body>
+</html>
