Signed-off-by: mtchang <mtchang@outlook.com>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <body>
 
 
-DDMWALLET 下載
-<a href="https://ddmxinfra.github.io/appdl/manifest.plist">DDMWallet 2.1.41</a>
-com.ddm.exchangewallet.enterprise1
+DDMWALLET 下載<br>
+<a href="itms-services://?action=download-manifest&url=https://ddmxinfra.github.io/appdl/manifest.plist">DDMWallet 2.1.41</a><br>
+com.ddm.exchangewallet.enterprise1<br>
 
 
 </body>
