Signed-off-by: mtchang <mtchang@outlook.com>

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <body>
 
 
-DDMWALLET 下載<br>
+IOS DDMWALLET 下載 (120MB)<br>
 <a href="itms-services://?action=download-manifest&url=https://ddmxinfra.github.io/appdl/manifest.plist">DDMWallet 2.1.41</a><br>
 com.ddm.exchangewallet.enterprise1<br>
-
+下載完成後, 在「描述檔管理程式」中簽署設定描述檔<br>
+update: 2021/01/25
 
 </body>
 </html>
